--- a/apps/front/tsconfig.json
+++ b/apps/front/tsconfig.json
@@ -15,7 +15,9 @@
       "$components/*": ["src/components/*"],
       "$store/*": ["src/store/*"],
       "$types/*": ["src/types/*"],
-      "$utils/*": ["src/utils/*"]
+      "$utils/*": ["src/utils/*"],
+      "$lib/api": ["../../libs/api"],
+      "$lib/app": ["../../libs/app"]
     }
   }
 }
