--- a/apps/shop/tsconfig.json
+++ b/apps/shop/tsconfig.json
@@ -16,7 +16,7 @@
       "$store/*": ["src/store/*"],
       "$types/*": ["src/types/*"],
       "$utils/*": ["src/utils/*"],
-      "$lib/api": ["../../libs/api"],
+      "$lib/back": ["../../libs/back"],
       "$lib/app": ["../../libs/app"]
     }
   }
