--- a/package.json
+++ b/package.json
@@ -24,7 +24,11 @@
     "svelte-preprocess": "^4.10.6",
     "tailwindcss": "^3.0.24",
     "tslib": "^2.3.1",
-    "typescript": "~4.6.2"
+    "typescript": "~4.6.2",
+    "@types/pg": "^8.6.5"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "pg": "^8.7.3"
+  }
 }
