--- a/apps/admin/tsconfig.json
+++ b/apps/admin/tsconfig.json
@@ -12,6 +12,7 @@
     "strict": true,
 
     "paths": {
+      "$components": ["src/components"],
       "$lib/back": ["../../libs/back"],
       "$lib/app": ["../../libs/app"]
     }
