--- a/apps/shop/tsconfig.json
+++ b/apps/shop/tsconfig.json
@@ -12,7 +12,7 @@
     "strict": true,
 
     "paths": {
-      "$components/*": ["src/components/*"],
+      "$components": ["src/components"],
       "$store/*": ["src/store/*"],
       "$types/*": ["src/types/*"],
       "$utils/*": ["src/utils/*"],
