--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@sveltejs/adapter-auto": "next",
     "@sveltejs/adapter-netlify": "^1.0.0-next.62",
     "@sveltejs/kit": "next",
+    "@types/pg": "^8.6.5",
     "@typescript-eslint/eslint-plugin": "^5.10.1",
     "@typescript-eslint/parser": "^5.10.1",
     "autoprefixer": "^10.4.7",
@@ -24,8 +25,7 @@
     "svelte-preprocess": "^4.10.6",
     "tailwindcss": "^3.0.24",
     "tslib": "^2.3.1",
-    "typescript": "~4.6.2",
-    "@types/pg": "^8.6.5"
+    "typescript": "~4.6.2"
   },
   "type": "module",
   "dependencies": {
