--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev:shop": "cd ./apps/shop && yarn dev",
     "dev:admin": "cd ./apps/admin && yarn dev",
     "build:shop": "cd ./apps/shop && yarn build",
-    "build:admin": "cd ./apps/admin && yarn build"
+    "build:admin": "cd ./apps/admin && yarn build",
+    "deploy:shop": "cd ./apps/shop && yarn deploy",
+    "deploy:admin": "cd ./apps/admin && yarn deploy"
   },
   "devDependencies": {
     "@sveltejs/adapter-auto": "next",
