--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -1,36 +1,11 @@
 {
-  "name": "ssr",
+  "name": "avoir-admin",
   "version": "0.0.1",
   "license": "UNLICENSED",
   "scripts": {
     "dev": "svelte-kit dev",
     "build": "svelte-kit build",
     "deploy": "netlify build && netlify deploy --prod"
-  },
-  "devDependencies": {
-    "@sveltejs/adapter-auto": "next",
-    "@sveltejs/adapter-netlify": "^1.0.0-next.62",
-    "@sveltejs/kit": "next",
-    "@types/pg": "^8.6.5",
-    "@typescript-eslint/eslint-plugin": "^5.10.1",
-    "@typescript-eslint/parser": "^5.10.1",
-    "autoprefixer": "^10.4.7",
-    "eslint": "^8.12.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-svelte3": "^4.0.0",
-    "postcss": "^8.4.14",
-    "prettier": "^2.5.1",
-    "prettier-plugin-svelte": "^2.5.0",
-    "svelte": "^3.44.0",
-    "svelte-check": "^2.2.6",
-    "svelte-preprocess": "^4.10.6",
-    "tailwindcss": "^3.0.24",
-    "tslib": "^2.3.1",
-    "typescript": "~4.6.2"
-  },
-  "dependencies": {
-    "clsx": "^1.1.1",
-    "pg": "^8.7.3"
   },
   "type": "module"
 }
