--- a/apps/admin/netlify.toml
+++ b/apps/admin/netlify.toml
@@ -2,5 +2,5 @@
   ID = "ed74c31f-c293-40a7-8cb7-0c3ebe89778a"
 
 [build]
-  base = "/"
-  command = "yarn deploy:admin"
+  base = "/apps/admin"
+  command = "yarn deploy"
